--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="expires" content="0" />
-    <title>Minutos Pagantes - Thatha Slots</title>
-    <meta name="description" content="Minutos Pagantes - Thatha Slots: Jogue Slots e Ganhe Prêmios Incríveis!
+    <title>Minutos Pagantes - Operação Premiada</title>
+    <meta name="description" content="Minutos Pagantes - Operação Premiada: Jogue Slots e Ganhe Prêmios Incríveis!
 
 Transforme seus minutos em dinheiro!" />
-    <meta name="keyword" content="Sinais da Thatha Sĺots, Lancou Pagou, Minutos Pagantes, Fortune Tiger, Fortune Rabbit, Fortune Mouse, Fortune Ox, Sala de Sinais" />
+    <meta name="keyword" content="Sinais da Operação Premiada, Lancou Pagou, Minutos Pagantes, Fortune Tiger, Fortune Rabbit, Fortune Mouse, Fortune Ox, Sala de Sinais" />
     <link rel="canonical" href="index.html" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/css/bootstrap.min.css"
         integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g=="
@@ -5138,7 +5138,7 @@ Transforme seus minutos em dinheiro!" />
 
         <div class="notification">
             <div class="notification-header">
-                <h3 class="notification-title">Notificação - Thatha Slots</h3>
+                <h3 class="notification-title">Notificação - Operação Premiada</h3>
                 <i class="fa fa-times notification-close"></i>
             </div>
             <div class="notification-container">
