--- a/redirecionar.html
+++ b/redirecionar.html
@@ -9,7 +9,7 @@
   <script>
   var urls = new Array();
 
-urls[0] = "https://fd.lagosta777.vip?s=1081447";
+urls[0] = "https://www.jaca777.com/#/?invite_code=45674674";
 
 var random = Math.floor(Math.random()*urls.length); window.location = urls[random];
 
